dbent-derive/tests/ui/entity_struct_unit.stderr
error: #[derive(Entity)] can only be used on structs with named fields
 --> tests/ui/entity_struct_unit.rs:4:12
  |
4 | struct Test();
  |            ^^
