dbent-derive/tests/ui/entity_struct_unit.rs
use dbent::prelude::*;

#[derive(Entity)]
struct Test();

fn main() {}
